<resources>
    <string name="player_name_alpha">.5</string>
    <string name="app_name">Billiard Match Analyzer</string>
    <string name="action_settings">Settings</string>
    <string name="prompt_game">Game</string>
    <string name="prompt_opponent">Opponent</string>
    <string name="prompt_date">Date</string>
    <string name="title_shooting_pct">Shooting percentage</string>
    <string name="title_avg_balls_turn">Average balls / turn</string>
    <string name="title_shots_made">Shots made / shots</string>
    <string name="title_shooting_fouls">Shooting fouls</string>
    <string name="title_games_won">Games won / games needed</string>
    <string name="title_games_won_apa">Games won / games played</string>
    <string name="title_win_pct">Win percentage</string>
    <string name="title_tsp">True shooting percentage</string>
    <string name="title_true_shots_made">Total shots made / total shots</string>
    <string name="title_ar">Aggressiveness rating</string>
    <string name="title_break_continuations">Continuation after break</string>
    <string name="title_break_fouls">Breaking fouls</string>
    <string name="title_break_wins">%1$s ball on the break</string>
    <string name="title_avg_break_balls">Average balls / break</string>
    <string name="title_successful_break">Ball on break / breaks</string>
    <string name="title_early_wins">Early wins</string>
    <string name="title_table_runs">Table runs</string>
    <string name="title_five_ball_outs">Five (or fewer) ball outs</string>
    <string name="title_break_runs">Break and runs</string>
    <string name="title_safeties_made">Safeties made / safeties</string>
    <string name="title_safety_pct">Safety percentage</string>
    <string name="title_safety_fouls">Safety fouls</string>
    <string name="title_safety_escapes">Safeties escaped</string>
    <string name="title_match_info">%1$s Match</string>
    <string name="title_match_info_ghost">%1$s vs. The Ghost</string>
    <string name="title_safeties_returned">Safeties returned</string>
    <string name="title_forced_fouls">Forced fouls</string>
    <string name="description_shots_made">The number of shots that you successfully made divided by the number of shots that you attempted to make</string>
    <string name="description_avg_balls_turn">The average number of balls pocketed per turn at the table (only turns that you attempted to make a ball count towards this average)</string>
    <string name="description_shooting_pct">Percentage of shots made</string>
    <string name="description_shooting_fouls">Shots that you attempted that ended up being a foul</string>
    <string name="description_win_pct">Percentage of games won</string>
    <string name="description_tsp">The percentage of shots that you successfully executed divided by the number of shots you attempted</string>
    <string name="description_true_shots_made">The number of shots that you successfully executed (shooting, safeties, breaks combined) divided by the number of shots that you attempted</string>
    <string name="description_ar">The number of offensive shots taken divided by the total number of shots taken (shots and safeties), break shots are not included in this</string>
    <string name="description_games_won">The number of games that you won divided by the number of shots that you attempted</string>
    <string name="description_safeties_made">The number of safeties that you successfully made divided by the number of safeties that you attempted</string>
    <string name="description_safety_pct">Percentage of safeties made</string>
    <string name="description_safety_fouls">Safeties that you attempted that ended up being a foul</string>
    <string name="description_safety_escapes">The number of times that you came to the table after your opponent played a safety on you that you successfully made a ball</string>
    <string name="description_safety_returns">The number of times that you came to the table after your opponent played a safety on you that you successfully played safe back</string>
    <string name="description_forced_errors">The number of times that your opponent forced you into making an error</string>
    <string name="description_break_continuations">The number of times that you were able to pocket a ball immediately following the break</string>
    <string name="description_successful_break">The number of breaks that you successfully made a ball divided by the number of breaks attempted</string>
    <string name="description_avg_break_balls">The average number of balls pocketed per break</string>
    <string name="description_break_fouls">The number of breaks that you fouled on</string>
    <string name="description_break_wins">The number of breaks that you successfully made the 8/9 ball on and won the game</string>
    <string name="description_break_runs">The number of times that you broke and ran</string>
    <string name="description_table_runs">The number of times that you ran the maximum number of balls possible to win the game</string>
    <string name="description_five_ball_outs">The number of times that you made 5 or fewer balls to win the game</string>
    <string name="description_early_wins">The number of times that you won the game because of making the 8/9/10 ball early, three fouling your opponent, or winning on the break</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="add_turn">Add turn</string>
    <string name="create_match">Create match</string>
    <string name="undid_turn">Undid last turn</string>
    <string name="redid_turn">Redid last turn</string>
    <string name="hint_player_name">Player 1 Name</string>
    <string name="hint_opponent_name">Search for opponent</string>
    <string name="hint_location">Location (optional)</string>
    <string name="hint_notes">Notes (optional)</string>
    <string name="title_break_errors">Break errors: %1$d</string>
    <string name="title_safety_errors">Safety errors: %1$d</string>
    <string name="title_safety_results">Safety results: %1$d</string>
    <string name="title_shooting_errors">Shooting errors: %1$d</string>
    <string name="title_aim">Aim</string>
    <string name="title_aim_right">right</string>
    <string name="title_aim_left">left</string>
    <string name="title_cut">Cut</string>
    <string name="title_cut_under">under</string>
    <string name="title_cut_over">over</string>
    <string name="title_speed">Speed</string>
    <string name="title_speed_fast">fast</string>
    <string name="title_speed_slow">slow</string>
    <string name="title_advanced_stats">Advanced stats for %1$s</string>
    <string name="title_shooting">Shooting</string>
    <string name="title_safeties">Safeties</string>
    <string name="title_breaks">Breaks</string>
    <string name="title_match_overview">Match overview</string>
    <string name="title_apa_stats">APA stats</string>
    <string name="title_game_won_on_break">%1$s on the break</string>
    <string name="out_of">%1$d/%2$d</string>
    <string name="title_run_outs">Run outs</string>
    <string name="title_games_needed">Games won / games needed</string>
    <string name="open_table">Table is open</string>
    <string name="solids_table">%1$s is solids</string>
    <string name="stripes_table">%1$s is stripes</string>
    <string name="error_same_name">Players cannot have the same id</string>
    <string name="break_winner">Winner breaks</string>
    <string name="break_alternate">Alternate breaks</string>
    <string name="break_loser">Loser breaks</string>
    <string name="break_player">%1$s always breaks</string>
    <string name="game_apa_eight">APA 8 Ball</string>
    <string name="game_apa_nine">APA 9 Ball</string>
    <string name="game_bca_eight">BCA 8 Ball</string>
    <string name="game_bca_nine">BCA 9 Ball</string>
    <string name="game_bca_ten">BCA 10 Ball</string>
    <string name="game_straight">Straight Pool</string>
    <string name="game_american_rotation">American Rotation</string>
    <string name="detail_simple">Simple</string>
    <string name="detail_normal">Normal</string>
    <string name="detail_advanced">Advanced</string>
    <string name="detail_player">Advanced (%1$s only)</string>
    <string name="title_page_players">Create new match</string>
    <string name="player_number">Player %1$d</string>
    <string name="location">Location</string>
    <string name="title_page_games">Select a game</string>
    <string name="title_page_break">The break</string>
    <string name="title_page_stats">Select data to collect</string>
    <string name="title_page_first_break">Who breaks first?</string>
    <string name="title_page_rank">Select %1$s\'s rank</string>
    <string name="ghost_name">The Ghost</string>
    <string name="bca_rules">BCA</string>
    <string name="apa_rules">APA</string>
    <string name="and">%1$s &amp; %2$s</string>
    <string name="delete_match">Would you like to delete this match?</string>
    <string name="match_location">Match Location</string>
    <string name="match_notes">Match Notes</string>
    <string name="undo_turn">Undo turn</string>
    <string name="redo_turn">Redo turn</string>
    <string name="view_game_status">View game status</string>
    <string name="view_profile">View profile</string>
    <string name="edit_name">Change id</string>
    <string name="view_adv_stats">View advanced stats for this match</string>
    <string name="select_balls">Select remaining balls</string>
    <string name="select_solids">Select all remaining solids</string>
    <string name="select_stripes">Select all remaining stripes</string>
    <string name="row_game">Game %1$d</string>
    <string name="row_rack">Rack %1$d</string>
    <string name="opponents">Opponents</string>
    <string name="title_player_profile">%1$s\'s Profile</string>
    <string name="action_filter">Filter</string>
    <string name="successful_breaks">Made a ball %3$s (%1$d/%2$d)</string>
    <string name="continuation_after_the_break">Continuation %3$s (%1$d/%2$d)</string>
    <string name="fouls_on_the_break">Fouls %3$s (%1$d/%2$d)</string>
    <string name="_8_9_on_the_break">8/9 on the break %3$s (%1$d/%2$d)</string>
    <string name="matches">Matches</string>
    <string name="edit_player_name">Change %1$s\'s id</string>
    <string name="rank">Rank</string>
    <string name="ranks">Ranks</string>
    <string name="description_rank">The APA rank of the player</string>
    <string name="points">Points / points needed</string>
    <string name="match_points">Match points earned</string>
    <string name="defensive_shots">Defensive shots</string>
    <string name="innings">Innings</string>
    <string name="dead_balls">Dead balls</string>
    <string name="description_dead_balls">The number of balls that were not pocketed throughout the match</string>
    <string name="description_innings">The number of innings in the match; please look up how innings are scored in the official APA rules</string>
    <string name="description_points">The number of points that each player has earned</string>
    <string name="description_match_points">The minimum number of match points earned by each player; when the match has finished it will display the actual points earned</string>
    <string name="title_tsp_short">True shooting pct</string>
    <string name="title_shooting_pct_short">Shooting pct</string>
    <string name="title_safety_pct_short">Safety pct</string>
    <string name="title_breaking_pct_short">Breaking pct</string>
    <string name="submit_feedback">Submit feedback</string>
    <string name="title_bank_error">Banks</string>
    <string name="title_kick_error">Kicks</string>
    <string name="reset_tutorial">Reset tutorial</string>
    <string name="toggle_view">Toggle view</string>
    <string name="about">About</string>
</resources>