<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/alert_dialog_padding"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        style="@style/help_dialog_title"
        android:text="@string/title_successful_break" />

    <TextView
        style="@style/help_dialog_text"
        android:text="@string/description_successful_break" />

    <TextView
        style="@style/help_dialog_title"
        android:text="@string/title_avg_break_balls" />

    <TextView
        style="@style/help_dialog_text"
        android:text="@string/description_avg_break_balls" />

    <TextView
        style="@style/help_dialog_title"
        android:text="@string/title_break_continuations" />

    <TextView
        style="@style/help_dialog_text"
        android:text="@string/description_break_continuations" />

    <TextView
        style="@style/help_dialog_title"
        android:text="@string/title_break_fouls" />

    <TextView
        style="@style/help_dialog_text"
        android:text="@string/description_break_fouls" />

    <TextView
        style="@style/help_dialog_title"
        android:text="@string/title_break_wins" />

    <TextView
        style="@style/help_dialog_text"
        android:text="@string/description_break_wins" />

</LinearLayout>