<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        style="@style/alert_dialog_padding"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            style="@style/help_dialog_title"
            android:text="@string/title_break_runs" />

        <TextView
            style="@style/help_dialog_text"
            android:text="@string/description_break_runs" />

        <TextView
            style="@style/help_dialog_title"
            android:text="@string/title_table_runs" />

        <TextView
            style="@style/help_dialog_text"
            android:text="@string/description_table_runs" />

        <TextView
            style="@style/help_dialog_title"
            android:text="@string/title_five_ball_outs" />

        <TextView
            style="@style/help_dialog_text"
            android:text="@string/description_five_ball_outs" />

        <TextView
            style="@style/help_dialog_title"
            android:text="@string/title_early_wins" />

        <TextView
            style="@style/help_dialog_text"
            android:text="@string/description_early_wins" />

    </LinearLayout>
</android.support.v4.widget.NestedScrollView>