<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        style="@style/alert_dialog_padding"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            style="@style/help_dialog_title"
            android:text="@string/title_shooting_pct" />

        <TextView
            style="@style/help_dialog_text"
            android:text="@string/description_shooting_pct" />

        <TextView
            style="@style/help_dialog_title"
            android:text="@string/title_shots_made" />

        <TextView
            style="@style/help_dialog_text"
            android:text="@string/description_shots_made" />

        <TextView
            style="@style/help_dialog_title"
            android:text="@string/title_avg_balls_turn" />

        <TextView
            style="@style/help_dialog_text"
            android:text="@string/description_avg_balls_turn" />

        <TextView
            style="@style/help_dialog_title"
            android:text="@string/title_shooting_fouls" />

        <TextView
            style="@style/help_dialog_text"
            android:text="@string/description_shooting_fouls" />
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>