<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/howMissDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:text="How the shot was missed:"
        android:textColor="@color/primary_text" />

    <android.support.v7.widget.GridLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <com.brookmanholmes.bma.ui.view.HowMissLayout
            android:id="@+id/aim"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:hml_left_label="aim left"
            app:hml_right_label="aim right"
            app:hml_title="@string/title_aim"
            app:layout_gravity="center" />

        <com.brookmanholmes.bma.ui.view.HowMissLayout
            android:id="@+id/speed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:hml_left_label="@string/title_speed_slow"
            app:hml_right_label="@string/title_speed_fast"
            app:hml_title="@string/title_speed"
            app:layout_gravity="center" />

        <com.brookmanholmes.bma.ui.view.HowMissLayout
            android:id="@+id/cut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:hml_left_label="under cut"
            app:hml_right_label="over cut"
            app:hml_title="@string/title_cut"
            app:layout_gravity="center" />

        <com.brookmanholmes.bma.ui.view.HowMissLayout
            android:id="@+id/kick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:hml_left_label="kick short"
            app:hml_right_label="kick long"
            app:hml_title="@string/title_kick_error"
            app:layout_gravity="center" />

        <com.brookmanholmes.bma.ui.view.HowMissLayout
            android:id="@+id/bank"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:hml_left_label="bank short"
            app:hml_right_label="bank long"
            app:hml_title="@string/title_bank_error"
            app:layout_gravity="center" />

        <com.brookmanholmes.bma.ui.view.HowMissLayout
            android:id="@+id/masse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:hml_left_label="curve early"
            app:hml_right_label="curve late"
            app:hml_title="Massé"
            app:layout_gravity="center" />
    </android.support.v7.widget.GridLayout>
</LinearLayout>