<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".ui.IntroActivity">

    <item
        android:id="@+id/spinner"
        android:title=""
        app:actionViewClass="android.widget.Spinner"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction"/>

    <item
        android:id="@+id/action_reset_preferences"
        android:orderInCategory="100"
        android:title="@string/reset_tutorial"
        app:showAsAction="never"/>

    <item android:id="@+id/action_submit_feedback"
          android:orderInCategory="500"
          android:title="@string/submit_feedback"
          app:showAsAction="never"/>

    <item android:id="@+id/action_about"
        android:orderInCategory="501"
        android:title="@string/about"
        app:showAsAction="never"/>
</menu>
