<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/card_view_style">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_shooting_pct"
            android:textColor="@color/primary_text"
            android:textSize="20sp" />

        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/graph"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:drawablePadding="4dp"
                android:drawableStart="@drawable/color_indicator_c0"
                android:text="@string/title_tsp_short"
                android:textSize="14sp" />


            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:drawablePadding="4dp"
                android:drawableStart="@drawable/color_indicator_c1"
                android:text="@string/title_shooting_pct_short"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:drawablePadding="4dp"
                android:drawableStart="@drawable/color_indicator_c3"
                android:text="@string/title_safety_pct_short"
                android:textSize="14sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:drawablePadding="4dp"
                android:drawableStart="@drawable/color_indicator_c2"
                android:text="@string/title_breaking_pct_short"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>