<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="3"
            android:columnOrderPreserved="true"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:rowCount="5"
            android:useDefaultMargins="true"
            tools:showIn="@layout/card_match_overview">

    <TextView
        android:id="@+id/tvWinPercentPlayer"
        style="@style/player_stats"
        android:textColor="@color/primary_text"
        android:text="1.000"/>

    <TextView
        style="@style/player_stats"
        android:layout_columnWeight="1"
        android:text="@string/title_win_pct"
        android:textColor="@color/primary_text"/>

    <TextView
        android:id="@+id/tvWinPercentOpponent"
        style="@style/player_stats"
        android:textColor="@color/primary_text"
        android:text="1.000"/>

    <TextView
        android:id="@+id/tvWinTotalsPlayer"
        style="@style/player_stats"
        android:textColor="@color/secondary_text"
        android:text="100/100"/>

    <TextView
        style="@style/player_stats"
        android:layout_columnWeight="1"
        android:text="@string/title_games_won"
        android:textColor="@color/secondary_text"/>

    <TextView
        android:id="@+id/tvWinTotalsOpponent"
        style="@style/player_stats"
        android:textColor="@color/secondary_text"
        android:text="100/100"/>

    <TextView
        android:id="@+id/tvTrueShootingPctPlayer"
        style="@style/player_stats"
        android:layout_gravity="center"
        android:textColor="@color/primary_text"
        android:text="1.000"/>

    <TextView
        style="@style/player_stats"
        android:layout_columnWeight="1"
        android:text="@string/title_tsp"
        android:textColor="@color/primary_text"/>

    <TextView
        android:id="@+id/tvTrueShootingPctOpponent"
        style="@style/player_stats"
        android:textColor="@color/primary_text"
        android:text="1.000"/>

    <TextView
        android:id="@+id/tvTotalShotsPlayer"
        style="@style/player_stats"
        android:textColor="@color/secondary_text"
        android:text="100/100"/>

    <TextView
        android:id="@+id/tvTotalShotsTitle"
        style="@style/player_stats"
        android:layout_columnWeight="1"
        android:text="@string/title_true_shots_made"
        android:textColor="@color/secondary_text"/>

    <TextView
        android:id="@+id/tvTotalShotsOpponent"
        style="@style/player_stats"
        android:textColor="@color/secondary_text"
        android:text="100/100"/>

    <TextView
        android:id="@+id/tvAggressivenessRatingPlayer"
        style="@style/player_stats"
        android:textColor="@color/primary_text"
        android:text="1.000"/>

    <TextView
        android:id="@+id/tvAggressivenessRating"
        style="@style/player_stats"
        android:layout_columnWeight="1"
        android:text="@string/title_ar"
        android:textColor="@color/primary_text"/>

    <TextView
        android:id="@+id/tvAggressivenessRatingOpponent"
        style="@style/player_stats"
        android:textColor="@color/primary_text"
        android:text="1.000"/>

</GridLayout>